# leLab

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build_frontend.yml  lockfile_registry_guard.yml  quality.yml  sync_space.yml  tests.yml
app/: calibrating.py  dataset_browser.py  hf_auth.py  inferring.py  jobs.py  main.py  recording.py
app/runners/: hf_cloud.py
docs/superpowers/plans/: 2026-05-04-training-jobs.md  2026-05-06-upload-page-already-on-hub.md
docs/superpowers/specs/: 2026-05-04-landing-dashboard-layout-design.md
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: UrdfViewer.tsx
frontend/src/contexts/: UrdfContext.tsx
frontend/src/hooks/: useCameraStream.ts  useReplayPlayback.ts  useRobots.ts
frontend/src/lib/: calibrationTargets.ts  checkpointsApi.ts  defaultUrdfModels.ts  inferenceApi.ts  jobsApi.ts
frontend/src/pages/: Calibration.tsx  Landing.tsx  (+3 more)
lelab/: __init__.py  __version__.py  calibrate.py  datasets.py  jobs.py  record.py  rollout.py  server.py  teleoperate.py  train.py  types.py  update.py
lelab/runners/: __init__.py  hf_cloud.py
lelab/scripts/: lelab.py
lelab/utils/: config.py  devices.py  hf_auth.py  system.py
study/: day0_overview.md  install.md
tests/: mocks.py  test_calibrate.py  test_datasets.py  test_devices.py  test_jobs.py  test_record.py  test_rollout.py  test_runners_hf_cloud.py  test_scripts_lelab.py  test_server.py  test_teleoperate.py  test_train.py  test_update.py  test_utils_config.py  test_utils_hf_auth.py  test_utils_system.py
(+12 files in other folders)
