[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "LeLab"
version = "0.1.0"
description = "LeRobot Lab - A web interface for robotics with lerobot integration"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "websockets>=15.0.1",
    "uvicorn>=0.24.0",
    "psutil>=5.9.0",
    "lerobot[core_scripts,feetech,training] @ git+https://github.com/huggingface/lerobot.git@82dffde7fad11cba91f7916b050fbe7d7eea35ab",
]

[project.scripts]
lelab = "scripts.backend:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "lelab*", "scripts*", "frontend"]

[tool.setuptools.package-data]
frontend = ["dist/**/*"]
